<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardapioFragment" >

    <Button
        android:id="@+id/bt_em_breve2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_em_breve"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/segunda" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terca" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quarta" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quinta" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexta" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_cardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Frango assado"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="2ª opção:"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Omelete"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Guarnição:"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Arroz\nFeijão\nMacarrão\nSalada forno (batata e cenoura)\nFarofa"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Sobremesa: "
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Fruta"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    
</androidx.constraintlayout.widget.ConstraintLayout>